[package]
name = "lat_lng_radius"
description = "Get min and max lat/lng within a radius"
version = "0.1.3"
authors = ["Jon Powers <jon.powers@icloud.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jpowersdev/latlngradius"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
geo = "0.11.0"
